--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     margin:0px auto;
     padding: 50px 0px 50px 0px;
     border-bottom: 1px ridge;
-    min-height:400px;
+    max-height:200px;
 }
 
 .footer {
@@ -27,4 +27,10 @@ address {
     font-size: 80%;
     margin: 0px;
     color:#0f0f0f;
+}
+.row-history {
+    margin:0px auto;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
+    max-height:400px;
 }
