Navbar and Breadcrumbs

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,11 @@ address {
     border-bottom: 1px ridge;
     max-height:400px;
 }
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
